# python_laboratory_brain

./: C  database.db  pyproject.toml
src/: LaboratoryBrain.spec  __main__.py  hook-webview.py
src/laboratory_brain/: config.py
src/laboratory_brain/controllers/: db_manager_api.py  delete.py  edit.py  pdf.py  register.py  search.py
src/laboratory_brain/database/: connection.py  db_manager.py  models.py
src/laboratory_brain/ui/: api.py  main_window.py
src/laboratory_brain/ui/api_modules/: windows_api.py
src/laboratory_brain/ui/templates/: index.html  renderer.js  trash.html
src/laboratory_brain/ui/templates/css/: style.css
src/laboratory_brain/ui/templates/views/: clients.html  clients.js  modal.html  notes.html  renderer.js  work_types.html
src/laboratory_brain/ui/templates/views/JS/: clients.js  dentists.js  notes.js  prices.js  register_client.js  register_dentist.js  register_notes.js  register_paid.js  register_prices.js  register_work.js  register_work_types.js  work_types.js  works.js
src/laboratory_brain/ui/templates/views/edit/: edit_notes.html
src/laboratory_brain/ui/templates/views/registers/: register_client.html  register_dentist.html  register_notes.html  register_paid.html  register_prices.html  register_work.html  register_work_types.html
src/laboratory_brain/ui/templates/views/tables/: clients.html  dentist.html  notes.html  prices.html  work_types.html  works.html
src/laboratorybrain/database/: models.py
src/laboratorybrain/ui/: main_window.py
