[project]
name = "laboratorybrain"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"

dependencies = [
    "pypdf2 (>=3.0.1,<4.0.0)",
    "fpdf (>=1.7.2,<2.0.0)",
    "sqlite-utils (>=3.38,<4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "laboratorybrain", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pyinstaller = "^6.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
